[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt ="2.9.0"
chrono = "0.4"
serde = {version = "1.0.196", features=["derive"]}
dotenv = "0.15.0"
config = "0.10.1"

