[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt ="2.9.0"
chrono = "0.4"
serde = {version = "1.0.196", features=["derive"]}
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
deadpool-postgres = "0.7.0"
tokio-postgres = "0.7.0"
env_logger = "0.11.1"

